[project]
name = "ABot-Graia"
version = "3.0.0.dev1"
description = ""
authors = [
    {name = "djkcyl", email = "cyl@cyllive.cn"},
]
dependencies = [
    "arclet-alconna-avilla>=0.17.1",
    "avilla-core>=1.0.0a18",
    "avilla-qqapi>=1.0.0a22",
    "avilla-twilight>=0.2.0",
    "beanie>=1.23.6",
    "creart>=0.3.0",
    "dnspython>=2.4.2",
    "graia-amnesia>=0.8.2",
    "graia-broadcast>=0.23.4",
    "graia-saya>=0.0.19",
    "graia-scheduler>=0.3.1",
    "graiax-playwright>=0.3.1",
    "graiax-shortcut>=0.1.0",
    "kayaku>=0.5.3",
    "launart>=0.8.2",
    "motor>=3.3.2",
    "miniopy-async>=1.17",
    "httpx>=0.25.2",
    "pillow>=10.1.0",
    "graiax-text2img-playwright>=0.4.3",
    "jinja2>=3.1.2",
    "rich>=13.7.0",
    "qrcode>=7.4.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "AGPL-3.0-only"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.12.0",
    "isort>=5.13.2",
    "ruff>=0.1.8",
]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
target-version = "py310"
select = [
    # https://beta.ruff.rs/docs/rules
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
    "I",  # isort
    # "D",  # pydocstyle
    "ASYNC", # flake8-async
]
exclude = [
    ".git",
    ".venv",
    "__pypackages__",
    "dist",
]
ignore = ["F401"]

[tool.ruff.pydocstyle]
convention = "google"
